# idbt

./: .gitignore  pyproject.toml
idbt/: __main__.py  client.py  install.py  kernel.py  server.py
idbt/magics/: __init__.py  dbt.py
notebooks/: example.ipynb  magic.ipynb
tests/: test_client.py  test_idbt.py
